[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel", "numpy"]

build-backend = "setuptools.build_meta"

[project]
name="carolina"
requires-python = ">=3.8"
dynamic = ["version"]
description = "Python wrapper around Dakota"
authors = [
  { name = "National Renewable Energy Laboratory (NREL)" },
  { name = "Equinor ASA", email = "fg_sib-scout@equinor.com" },
]
readme = "README.md"
license = {text = "Apache 2.0"}

[metadata]
homepage = "https://github.com/equinor/carolina"
repository = "https://github.com/equinor/carolina"

[tool.setuptools_scm]
write_to = "src/version.py"
