[build-system]
requires = ["setuptools", "wheel", "numpy"]

build-backend = "setuptools.build_meta"

[project]
name="carolina"
requires-python = ">=3.8"
description = "Python wrapper around Dakota"
authors = [
  { name = "National Renewable Energy Laboratory (NREL)" },
  { name = "Equinor ASA", email = "fg_sib-scout@equinor.com" },
]
readme = "README.md"
license = {text = "Apache 2.0"}
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/version.py"

[metadata]
version = "1.0"
homepage = "https://github.com/equinor/carolina"
repository = "https://github.com/equinor/carolina"
