[build-system]
requires = [
  "setuptools_scm[toml]",
  "numpy"
]

build-backend = "setuptools.build_meta"

[project]
name="carolina"
requires-python = ">=3.8"
description = "Python wrapper around Dakota"
authors = [
  { name = "Equinor ASA", email = "fg_sib-scout@equinor.com" },
  { name = "National Renewable Energy Laboratory (NREL)" },
]
readme = "README.md"
license = {text = "Apache 2.0"}
dynamic = ["version", "dependencies"]

classifiers = ['Intended Audience :: Science/Research',
               'Natural Language :: English',
               'License :: OSI Approved :: Apache Software License',
               'Operating System :: OS Independent',
               'Programming Language :: Python',
               'Programming Language :: Python :: 3.11',
               'Programming Language :: Python :: 3.12',
               ]

[tool.setuptools_scm]
write_to = "src/_version.py"

[metadata]
homepage = "https://github.com/equinor/carolina"
repository = "https://github.com/equinor/carolina"
